index.html: add profile section, styles.css: add profile section stles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,33 @@
       </div>
     </nav>
 
-    <section></section>
+    <section id="profile">
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I'm</p>
+        <h1 class="title">< Michel <span>Ange /></span></h1>
+        <p class="section__text__p2">Fullstack Developer</p>
+        <div class="experiance-text-container">
+          <div class="text-experiance">
+            <h1>2</h1>
+            <p>Year of experience</p>
+          </div>
+          <div class="text-experiance">
+            <h1>5</h1>
+            <p>Project complete around the world</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="section__pic-container">
+        <img src="assets/Lukita.png" alt="Profile image" />
+      </div>
+      <div class="profile-social-media">
+        <img src="assets/icons/icons8-linkedin-50.png" alt="linkedin icon" />
+        <img src="assets/icons/icons8-github-100.png" alt="github icon" />
+        <img src="assets/icons/icons8-twitter-100.png" alt="twitter icon" />
+        <img src="assets/icons/icons8-facebook-100.png" alt="facebook icon" />
+      </div>
+    </section>
 
     <script src="script.js"></script>
   </body>
