index.html:add about section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,31 @@
       </div>
     </section>
 
+    <section id="about">
+      <h1 class="title">About</h1>
+      <div class="section__about-title">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer velit
+          turpis, finibus eu condimentum ut, posuere at ipsum. Maecenas vel
+          consequat mauris. Quisque sodales ipsum aliquet aliquam placerat.
+          Proin varius condimentum sapien. Mauris quis elit nibh. Morbi ut
+          facilisis nisl. Duis et leo ut odio rhoncus porta a a dui. Nullam arcu
+          nibh, bibendum in enim sed, ullamcorper feugiat nunc.
+        </p>
+      </div>
+      <div class="section__about-container">
+        <div class="section__about-projects">
+          <p class="about-title">Fullstack Developer</p>
+          <a href="#">projects</a>
+        </div>
+
+        <div class="section__about-projects">
+          <p class="about-title">Freelancer <span>{ }</span></p>
+          <a href="#">Hire me</a>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
