index.htm: add contact section

--- a/index.html
+++ b/index.html
@@ -428,7 +428,45 @@
             </div>
           </div>
         </div>
-        <h4 class="more-blogs-links btn"><a href="#">More Blogs</a></h4>
+      </div>
+      <h4 class="more-blogs-links"><a href="#">More Blogs</a></h4>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact">
+      <p class="section__text__p1">Get in touch</p>
+      <h1 class="title">Contact</h1>
+      <div class="contact-container">
+        <div class="contact-social-media">
+          <p class="contact-social-media-items">
+            <img
+              src="assets/icons/icons8-linkedin-50.png"
+              alt="linkedin icon"
+            />
+            <span><a href="#">linkedin.com</a></span>
+          </p>
+          <p class="contact-social-media-items">
+            <img src="assets/icons/icons8-github-100.png" alt="github icon" />
+            <span><a href="#">github.com</a></span>
+          </p>
+          <p class="contact-social-media-items">
+            <img src="assets/icons/icons8-twitter-100.png" alt="twitter" />
+            <span><a href="#">twitter.com</a></span>
+          </p>
+          <p class="contact-social-media-items">
+            <img src="assets/icons/icons8-facebook-100.png" alt="facebook" />
+            <span><a href="#">facebook.com</a></span>
+          </p>
+        </div>
+
+        <div class="contact-form">
+          <h3>Send a message</h3>
+          <form action="Post">
+            <label for="message">Message:</label>
+            <textarea name="" id="message" cols="90" rows="10"></textarea>
+            <span><input type="submit" class="btn-submit" value="send" /></span>
+          </form>
+        </div>
       </div>
     </section>
 
