create detail.html page

--- a/index.html
+++ b/index.html
@@ -461,16 +461,16 @@
         </div>
 
         <div class="contact-form">
-          <h3>Send a message</h3>
+          <h3 class="comment-title-text">Send a message</h3>
           <form action="Post">
-            <label for="message">Message:</label>
+            <label for="message" class="form-label">Message:</label>
             <textarea name="" id="message" rows="10"></textarea>
             <span><input type="submit" class="btn-submit" value="send" /></span>
           </form>
         </div>
       </div>
     </section>
-
+    <!-- footer -->
     <footer>
       <section>
         <p class="footer__text__p1">Portfolio of Michel Ange</p>
