index.html: refactoring code by adding some classes

--- a/blogs-list.html
+++ b/blogs-list.html
@@ -52,7 +52,7 @@
         </form>
       </div>
       <!-- list of blogs -->
-      <div class="container">
+      <div class="container flex-center flex-wrap">
         <div class="card">
           <div class="card-header">
             <img
@@ -60,11 +60,11 @@
               alt="rover"
             />
           </div>
-          <div class="card-body">
+          <div class="card-body flex-center flex-column">
             <span class="tag tag-teal">Technology</span>
             <h4>Why is the Tesla Cybertruck designed the way it is?</h4>
             <p>An exploration into the truck's polarising design</p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -97,14 +97,14 @@
               alt="balloons"
             />
           </div>
-          <div class="card-body">
+          <div class="card-body flex-center flex-column">
             <span class="tag tag-purple">Popular</span>
             <h4>How to Keep Going When You Don’t Know What’s Next</h4>
             <p>
               The future can be scary, but there are ways to deal with that
               fear.
             </p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -137,11 +137,11 @@
               alt="city"
             />
           </div>
-          <div class="card-body">
+          <div class="card-body flex-center flex-column">
             <span class="tag tag-pink">Design</span>
             <h4>10 Rules of Dashboard Design</h4>
             <p>Dashboard Design Guidelines</p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -174,11 +174,11 @@
               alt="rover"
             />
           </div>
-          <div class="card-body">
+          <div class="card-body flex-center flex-column">
             <span class="tag tag-teal">Technology</span>
             <h4>Why is the Tesla Cybertruck designed the way it is?</h4>
             <p>An exploration into the truck's polarising design</p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -211,14 +211,14 @@
               alt="balloons"
             />
           </div>
-          <div class="card-body">
+          <div class="card-body flex-center flex-column">
             <span class="tag tag-purple">Popular</span>
             <h4>How to Keep Going When You Don’t Know What’s Next</h4>
             <p>
               The future can be scary, but there are ways to deal with that
               fear.
             </p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -251,11 +251,11 @@
               alt="city"
             />
           </div>
-          <div class="card-body">
+          <div class="card-body flex-center flex-column">
             <span class="tag tag-pink">Design</span>
             <h4>10 Rules of Dashboard Design</h4>
             <p>Dashboard Design Guidelines</p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -288,8 +288,8 @@
     <footer>
       <section>
         <p class="footer__text__p1">Portfolio of Michel Ange</p>
-        <div class="footer-container">
-          <div class="footer-link-container">
+        <div class="footer- flex-center flex-wrap">
+          <div class="footer-link- flex-center flex-wrap">
             <p class="footer-links-items">
               <a href="#about">About</a>
             </p>
