--- a/detail.html
+++ b/detail.html
@@ -78,14 +78,14 @@
         work people don’t want to be doing. In the process, they can make us
         safer, healthier, more productive, and even less lonely.
       </p>
-      <div class="blog-links">
+      <div class="blog-links flex-space-between">
         Read This Next
         <span
           ><a href="#" class="blog-bold">like</a>
           <a href="#" class="blog-bold">share</a></span
         >
       </div>
-      <div class="container">
+      <div class="container flex-center flex-wrap">
         <div class="card">
           <div class="card-header">
             <img
@@ -97,7 +97,7 @@
             <span class="tag tag-teal">Technology</span>
             <h4>Why is the Tesla Cybertruck designed the way it is?</h4>
             <p>An exploration into the truck's polarising design</p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -137,7 +137,7 @@
               The future can be scary, but there are ways to deal with that
               fear.
             </p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -174,7 +174,7 @@
             <span class="tag tag-pink">Design</span>
             <h4>10 Rules of Dashboard Design</h4>
             <p>Dashboard Design Guidelines</p>
-            <div class="card-info-section">
+            <div class="card-info-section flex-space-between gap-2">
               <div class="user">
                 <img
                   src="https://lh3.googleusercontent.com/ogw/ADGmqu8sn9zF15pW59JIYiLgx3PQ3EyZLFp5Zqao906l=s32-c-mo"
@@ -214,7 +214,7 @@
 
       <!-- comment -->
 
-      <div class="single__blog-comment-container">
+      <div class="single__blog-comment-container flex-column flex-center">
         <!-- single comment -->
         <div class="comment-item">
           <p class="comment-info-head">
