--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
           <label>Password</label>
         </div>
         <div class="pass">Forgot Password?</div>
-        <input type="submit" value="Login" />
+        <input type="submit" value="Login" class="login-sub-btn" />
         <div class="signup_link">Not a member? <a href="#">Signup</a></div>
       </form>
     </div>
