admin-dashboard: work on admin dashboard by adding navigation bar and detail and top bar section

--- a/blogs-list.html
+++ b/blogs-list.html
@@ -285,11 +285,12 @@
     </section>
 
     <!-- footer -->
+    <!-- footer -->
     <footer>
       <section>
         <p class="footer__text__p1">Portfolio of Michel Ange</p>
-        <div class="footer- flex-center flex-wrap">
-          <div class="footer-link- flex-center flex-wrap">
+        <div class="flex-space-between flex-wrap">
+          <div class="footer-link-container flex-space-around flex-column">
             <p class="footer-links-items">
               <a href="#about">About</a>
             </p>
