--- a/detail.html
+++ b/detail.html
@@ -207,7 +207,7 @@
           <label for="message" class="form-label">comment:</label>
           <textarea name="" id="message" rows="10"></textarea>
           <span
-            ><input type="submit" class="btn-submit" value="comment"
+            ><input type="submit" class="btn btn-color-1" value="comment"
           /></span>
         </form>
       </div>
@@ -315,10 +315,11 @@
       </div>
       <h4 class="more-blogs-links"><a href="#">More comment</a></h4>
     </section>
+    <!-- footer -->
     <footer>
       <section>
         <p class="footer__text__p1">Portfolio of Michel Ange</p>
-        <div class="footer-container">
+        <div class="flex-space-between flex-wrap">
           <div class="footer-link-container">
             <p class="footer-links-items">
               <a href="#about">About</a>
