admin-dashboard.html: finish create home page for admin page

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -130,8 +130,8 @@
         <!-- Blog detail list -->
         <div class="details">
           <div class="recentBlogs">
-            <div class="cardHeader flex-space-between">
-              <h2>Recent Blogs</h2>
+            <div class="cardHeader">
+              <h2>Recent Orders</h2>
               <a href="#" class="view-all-btn">View All</a>
             </div>
             <table>
@@ -149,27 +149,99 @@
                   <td>02/Feb/2024</td>
                   <td>Web development in Rwanda</td>
                   <td>Michel</td>
-                  <td class="status activate">active</td>
+                  <td><span class="status activate">active</span></td>
                 </tr>
                 <tr>
                   <td>02/Feb/2024</td>
                   <td>Web development in Rwanda</td>
                   <td>Michel</td>
-                  <td class="status panding">Panding</td>
+                  <td><span class="status panding">panding</span></td>
                 </tr>
                 <tr>
                   <td>02/Feb/2024</td>
                   <td>Web development in Rwanda</td>
                   <td>Michel</td>
-                  <td class="status panding">Panding</td>
+                  <td><span class="status panding">panding</span></td>
                 </tr>
                 <tr>
                   <td>02/Feb/2024</td>
                   <td>Web development in Rwanda</td>
                   <td>Michel</td>
-                  <td class="status panding">Panding</td>
+                  <td><span class="status panding">panding</span></td>
                 </tr>
               </tbody>
+            </table>
+          </div>
+          <!-- new messages -->
+          <div class="recentMessages">
+            <div class="cardHeader">
+              <h2>Recent Messages</h2>
+            </div>
+            <table>
+              <tr>
+                <td>
+                  <div class="imgBx">
+                    <img src="assets/customer02.jpg" alt="" />
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    John Deo <br />
+                    <span
+                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Nullam porttitor interdum volutpat.
+                    </span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="imgBx">
+                    <img src="assets/customer02.jpg" alt="" />
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    John Deo <br />
+                    <span
+                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Nullam porttitor interdum volutpat.
+                    </span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="imgBx">
+                    <img src="assets/customer02.jpg" alt="" />
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    John Deo <br />
+                    <span
+                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Nullam porttitor interdum volutpat.
+                    </span>
+                  </h4>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="imgBx">
+                    <img src="assets/customer02.jpg" alt="" />
+                  </div>
+                </td>
+                <td>
+                  <h4>
+                    John Deo <br />
+                    <span
+                      >Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Nullam porttitor interdum volutpat.
+                    </span>
+                  </h4>
+                </td>
+              </tr>
             </table>
           </div>
         </div>
