--- a/blogs-list.html
+++ b/blogs-list.html
@@ -313,7 +313,7 @@
             <form action="Post">
               <input type="text" placeholder="First Name" />
               <input type="text" placeholder="Last Name" />
-              <input type="email" placeholder="First Name" />
+              <input type="email" placeholder="E-mail" />
               <span
                 ><input type="submit" class="btn-submit" value="send"
               /></span>
