--- a/detail.html
+++ b/detail.html
@@ -320,7 +320,7 @@
       <section>
         <p class="footer__text__p1">Portfolio of Michel Ange</p>
         <div class="flex-space-between flex-wrap">
-          <div class="footer-link-container">
+          <div class="footer-link-container flex-space-around flex-column">
             <p class="footer-links-items">
               <a href="#about">About</a>
             </p>
