index.html: login direct to admin panel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
       <div class="login-btn">
-        <a href="login.html">login</a>
+        <a href="admin-dashboard.html">login</a>
       </div>
     </nav>
     <nav id="hamburger-nav">
