--- a/login.html
+++ b/login.html
@@ -10,14 +10,14 @@
   <body id="login-body">
     <div class="center">
       <h1>Login</h1>
-      <form method="post">
+      <form method="post" onsubmit="return validateForm()">
         <div class="txt_field">
-          <input type="text" required />
+          <input type="text" id="username" required />
           <span></span>
           <label>Username</label>
         </div>
         <div class="txt_field">
-          <input type="password" required />
+          <input type="password" id="password" required />
           <span></span>
           <label>Password</label>
         </div>
@@ -26,5 +26,7 @@
         <div class="signup_link">Not a member? <a href="#">Signup</a></div>
       </form>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
